KubernetesLLM/ChatBot/blenderchat_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blenderbot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blenderbot
  template:
    metadata:
      labels:
        app: blenderbot
    spec:
      containers:
      - name: blenderbot-container
        image: blenderbot:latest
        imagePullPolicy: Never
        volumeMounts:
        - name: huggingface-cache
          mountPath: /root/.cache/huggingface
        ports:
        - containerPort: 8501  
      volumes:
      - name: huggingface-cache
        hostPath:
          path: /huggingface
          type: Directory
