KubernetesLLM/ChatBot/blenderchat_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blenderbot-service
spec:
  selector:
    app: blenderbot
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
  type: LoadBalancer
  externalIPs:
  - 192.168.49.2
