KubernetesLLM/ChatBot/blenderchat_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: k8s.chatbot.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blenderbot-service
            port:
              number: 8501

#127.0.0.1  k8s.chatbot.local k8s.mongo.local
